--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
         "mongoose": "3.4.x",
         "grunt-rsync": "*",
         "qs": "0.5.x",
-        "grunt-contrib-stylus": "*"
+        "grunt-contrib-stylus": "*",
+        "cucumber": "~0.3",
+        "async": "~0.1",
+        "connect": "~2.7",
+        "zombie": "~1.4"
     },
     "scripts": {
-        "start": "node backend.js"
+        "start": "node backend.js",
+        "test": "node_modules/.bin/cucumber.js"
     }
 }
