--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
     "name": "rithis-barbudos",
-    "description": "bar-barbudos.ru",
     "version": "0.0.2",
-    "private": true,
-    "dependencies": {
-        "restify": "2.0.x",
-        "mongoose": "3.4.x",
-        "grunt-rsync": "*",
-        "qs": "0.5.x",
-        "grunt-contrib-stylus": "*",
-        "cucumber": "~0.3",
-        "async": "~0.1",
-        "connect": "~2.7",
-        "zombie": "~1.4"
-    },
+    "description": "bar-barbudos.ru",
     "scripts": {
-        "start": "node backend.js",
+        "start": "node_modules/.bin/coffee barbudos.coffee",
         "test": "node_modules/.bin/cucumber.js"
-    }
+    },
+    "dependencies": {
+        "coffee-script": "~1.4",
+        "async": "~0.1",
+        "express": "~3.1",
+        "mongoose": "3.4.x",
+        "cucumber": "~0.3",
+        "zombie": "~1.4",
+        "connect-coffee-script": "~0.1",
+        "stylus": "~0.32",
+        "bower": "~0.6"
+    },
+    "engines": {
+        "node": "~0.8",
+        "npm": "~1.1"
+    },
+    "private": true
 }
