--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "coffee-script": "~1.4",
         "async": "~0.1",
+        "glob": "~3.1",
         
         "express": "~3.1",
         "mongoose": "3.4.x",
