--- a/package.json
+++ b/package.json
@@ -8,19 +8,14 @@
     },
     "dependencies": {
         "coffee-script": "~1.4",
-        "async": "~0.1",
-        "glob": "~3.1",
-        
-        "express": "~3.1",
-        "mongoose": "3.4.x",
-        
+        "rithis-stack": "~0.0",
+
         "cucumber": "~0.3",
         "zombie": "~1.4",
         "coffeelint": "~0.5",
-        
-        "connect-coffee-script": "~0.1",
-        "stylus": "~0.32",
-        "bower": "~0.6"
+        "mongoose": "~3.4",
+        "async": "~0.1",
+        "glob": "~3.1"
     },
     "engines": {
         "node": "~0.8",
