--- a/package.json
+++ b/package.json
@@ -8,22 +8,15 @@
     },
     "dependencies": {
         "coffee-script": "~1.4",
-        "async": "~0.1",
-        "glob": "~3.1",
+        "rithis-stack": "~0.0",
         "node-uuid": "~1.4",
-        
-        "express": "~3.1",
-        "mongoose": "3.4.x",
-        
+
         "cucumber": "~0.3",
         "zombie": "~1.4",
         "coffeelint": "~0.5",
-        
-        "connect-coffee-script": "~0.1",
-        "jade": "~0.28",
-        "stylus": "~0.32",
-        "nib": "~0.9",
-        "bower": "~0.6"
+        "mongoose": "~3.4",
+        "async": "~0.1",
+        "glob": "~3.1"
     },
     "engines": {
         "node": "~0.8",
