--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "dependencies": {
         "coffee-script": "~1.4",
-        "supplier": "~0.3",
+        "symfio": "~0.4",
         "node-uuid": "~1.4",
 
         "cucumber": "~0.3",
