--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
     "description": "bar-barbudos.ru",
     "scripts": {
         "start": "node_modules/.bin/coffee barbudos.coffee",
-        "test": "node_modules/.bin/cucumber.js"
+        "test": "./node_modules/.bin/grunt test"
     },
     "dependencies": {
         "coffee-script": "~1.4",
         "supplier": "~0.3",
-        "node-uuid": "~1.4",
-
-        "cucumber": "~0.3",
+        "node-uuid": "~1.4"
+    },
+    "devDependencies": {
+        "grunt": "~0.4",
+        "grunt-cli": "~0.1",
+        "grunt-contrib-clean": "~0.4",
+        "grunt-simple-mocha": "~0.3",
+        "grunt-coffeelint": "~0.0",
+        "grunt-docco": "~0.2",
+        "supertest": "~0.5",
         "zombie": "~1.4",
-        "coffeelint": "~0.5",
-        "mongoose": "~3.4",
-        "async": "~0.1",
-        "glob": "~3.1"
+        "should": "~1.2",
+        "lodash": "~1.0"
     },
     "engines": {
         "node": "~0.8",
