--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "rithis-barbudos",
-    "version": "0.0.2",
+    "version": "0.0.0",
     "description": "bar-barbudos.ru",
     "scripts": {
         "start": "node_modules/.bin/coffee barbudos.coffee",
-        "test": "./node_modules/.bin/grunt test"
+        "test": "node_modules/.bin/grunt test"
     },
     "dependencies": {
-        "coffee-script": "~1.4",
-        "supplier": "~0.3",
+        "coffee-script": "~1.6",
+        "symfio": "~0.4",
         "node-uuid": "~1.4"
     },
     "devDependencies": {
@@ -18,6 +18,7 @@
         "grunt-simple-mocha": "~0.3",
         "grunt-coffeelint": "~0.0",
         "grunt-docco": "~0.2",
+        "async": "~0.2",
         "supertest": "~0.5",
         "zombie": "~1.4",
         "should": "~1.2",
@@ -25,7 +26,7 @@
     },
     "engines": {
         "node": "~0.8",
-        "npm": "~1.1"
+        "npm": ">=1.1"
     },
     "private": true
 }
