--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node-uuid": "~1.4",
     "superagent": "~0.12",
     "lodash": "~1.0",
-    "nconf": "~0.6"
+    "nconf": "~0.6",
+    "nodemailer": "~0.4"
   },
   "devDependencies": {
     "grunt": "~0.4",
